--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^3.0.7",
     "vue-router": "^4.0.5",
     "vue-slide-up-down": "^2.0.1",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.323",
@@ -42,5 +43,23 @@
     "arrowParens": "avoid",
     "trailingComma": "none",
     "proseWrap": "always"
+  },
+  "resolutions": {
+    "@vue/compiler-dom": "3.0.9",
+    "@vue/shared": "3.0.9",
+    "@vue/compiler-core": "3.0.9",
+    "@babel/parser": "7.13.13",
+    "@babel/types": "7.13.14",
+    "estree-walker": "2.0.2",
+    "argparse": "2.0.1",
+    "entities": "2.1.0",
+    "commander": "7.2.0",
+    "universalify": "2.0.0",
+    "acorn": "8.1.0",
+    "cssom": "0.4.4",
+    "tough-cookie": "4.0.0",
+    "webidl-conversions": "6.1.0",
+    "extsprintf": "1.3.0",
+    "hoek": "6.1.3"
   }
 }
