added some data

--- a/src/data/states/berlin.yml
+++ b/src/data/states/berlin.yml
@@ -5,7 +5,7 @@ updated: 2021
 type: ifg
 fdsId: 4
 criteria:
-  - title: Qualität der Veröffenltichung
+  - title: Transparenz der Daten
     points: 1
     citation: ''
     limitation:
