--- a/src/data/states/berlin.yml
+++ b/src/data/states/berlin.yml
@@ -8,12 +8,12 @@ criteria:
   - title: Transparenz der Daten
     points: 3
     citation: ''
-    limitation:
+    limitation: 'test'
   - title: Vollständigkeit der Daten
     points: 6
     citation: ''
-    limitation:
+    limitation: 'test'
   - title: Auflösung der Daten
     points: 2
-    citation: ''
-    limitation:
+    citation: 'test2'
+    limitation: 'test'
