changed link style of btn

--- a/src/data/states/niedersachsen.yml
+++ b/src/data/states/niedersachsen.yml
@@ -2,6 +2,7 @@ name: Niedersachen
 short: NI
 type: false
 data: false
+datalink: https://www.test.de
 fdsId: 93
 criteria:
   - title: Transparenz der Daten
