--- a/src/data/states/hamburg.yml
+++ b/src/data/states/hamburg.yml
@@ -3,6 +3,7 @@ short: HH
 year: 2020
 type: tg
 fdsId: 5
+datalink: 'https://github.com/okfde/wo-ist-vera.de/tree/main/src/assets/vera%20data'
 criteria:
   - title: Transparenz der Daten
     points: 1
