--- a/src/data/states/nrw.yml
+++ b/src/data/states/nrw.yml
@@ -2,6 +2,7 @@ name: Nordrhein-Westfalen
 short: NRW
 year: 2001
 type: ifg
+datalink: 'https://github.com/okfde/wo-ist-vera.de/tree/main/src/assets/vera%20data'
 fdsId: 2
 criteria:
   - title: Transparenz der Daten
