--- a/src/data/states/mecklenburg-vorpommern.yml
+++ b/src/data/states/mecklenburg-vorpommern.yml
@@ -3,6 +3,7 @@ short: MV
 year: 2006
 updated: 2011
 type: ifg
+datalink: 'https://github.com/okfde/wo-ist-vera.de/tree/main/src/assets/vera%20data'
 fdsId: 7
 criteria:
   - title: Transparenz der Daten
