changed some txt

--- a/src/data/categories.yml
+++ b/src/data/categories.yml
@@ -2,8 +2,8 @@
   slug: gesamt
   color: '#000000'
   description:
-    Klicken Sie auf ein Bundesland oder eine Kategorie, um mehr zu
-    erfahren.
+    "Die transparentesten Bundesländer: Klicken Sie auf ein Bundesland oder eine Kategorie, um mehr zu
+    erfahren."
 - title: Auflösung der Daten
   slug: aufloesung
   color: '#FDEB1D'
