--- a/src/data/states/mecklenburg-vorpommern.yml
+++ b/src/data/states/mecklenburg-vorpommern.yml
@@ -5,6 +5,7 @@ updated: 2011
 type: ifg
 datalink: 'https://github.com/okfde/wo-ist-vera.de/tree/main/src/assets/vera%20data'
 fdsId: 7
+info: Die Daten wurden erst nach einer IFG-Anfrage veröffentlicht.
 criteria:
   - title: Transparenz der Daten
     points: 2
